[project]
name = "pathstring"
version = "1.1.0"
description = "String with path operations."
readme = "README.rst"

authors = [{name = "H. Turgut Uyar", email = "uyar@tekir.org"}]
license = {file = "LICENSE.txt"}

keywords = ["path"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

requires-python = "~=3.7"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "tox",
]

[project.urls]
Homepage = "https://pypi.org/project/pathstring/"
Repository = "https://github.com/uyar/pathstring"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{310,39,38,37}, pypy{39,38,37}, style
isolated_build = True

[testenv]
deps =
    pytest
commands =
    pytest {posargs:tests}

[testenv:style]
deps =
    flake8
commands =
    flake8 pathstring.py
"""

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"
