[project]
name = "pathstring"
version = "1.1.0"
description = "String with path operations."
readme = "README.rst"

authors = [{name = "H. Turgut Uyar", email = "uyar@tekir.org"}]
license = {file = "LICENSE.txt"}

keywords = ["path"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

requires-python = "~=3.7"

[project.optional-dependencies]
tests = [
    "pytest",
]
lint = [
    "flake8",
]
dev = [
    "pathstring[tests,lint]",
    "tox",
    "build",
]

[project.urls]
homepage = "https://pypi.org/project/pathstring/"
repository = "https://github.com/uyar/pathstring"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{37,38,39,310,311}, pypy{37,38,39}, style
isolated_build = True

[testenv]
extras = tests
commands =
    pytest {posargs:tests}

[testenv:style]
extras = lint
commands =
    flake8 pathstring.py
"""

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"
