[project]
name = "pathstring"
version = "1.1.0"
description = "String with path operations."
readme = "README.rst"

authors = [{name = "H. Turgut Uyar", email = "uyar@tekir.org"}]
license = {file = "LICENSE.txt"}

keywords = ["path"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

requires-python = "~=3.8"

[project.optional-dependencies]
tests = ["pytest"]
style = ["flake8", "flake8-isort"]
dev = [
    "pathstring[tests,style]",
    "build",
    "twine",
    "tox",
]

[project.urls]
homepage = "https://pypi.org/project/pathstring/"
repository = "https://github.com/uyar/pathstring"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
lines_after_imports = 2
multi_line_output = 2
known_test = "pytest,unittest"
sections = "TEST,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{8,9,10,11,12}, pypy3{8,9,10}, style
isolated_build = True

[testenv]
extras = tests
package = wheel
wheel_build_env = .pkg
commands =
    pytest

[testenv:style]
skip_install = true
deps =
    flake8
    flake8-isort
commands =
    flake8 pathstring.py tests
"""

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"
